jscomp/syntax/tests/parsing/errors/scanner/exoticIdent.res
type \""

type \"" = int

let \""

let \"a
b
c" = 1
